--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,6 +38,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div class="row">
+      <div class="column">
+        <img class="tres" src="./images/tc.png" alt="tres"/>
+        <img class="fgs" src="./images/fgs.png" alt="tres"/>
+        <img class="tbg" src="./images/tbg.png" alt="tres"/>
+      </div>
+    </div>
   </body>
 
 </html>
